--- a/app/src/style/reset.css
+++ b/app/src/style/reset.css
@@ -32,68 +32,19 @@ body {
   background-color: var(--gray-1);
 }
 
-/* flex */
 
-.d-flex {
-  display: flex;
-}
 
-.flex-row {
-  flex-direction: row;
-}
 
-.flex-column {
-  flex-direction: column;
-}
 
-.justify-content-center {
-  justify-content: center;
-}
 
-.align-items-center {
-  align-items: center;
-}
-
-.flex-fill {
-  flex: 1 1 auto;
-}
-
-/* padding */
-
-.p-10 {
-  padding: 10px;
-}
-
-.p-20 {
-  padding: 20px;
-}
-
-.p-30 {
-  padding: 30px;
-}
-/* 
-margin
- */
-
-.m-10 {
-  margin: 10px;
-}
-
-.m-20 {
-  margin: 20px;
-}
-
-.m-30 {
-  margin: 30px;
-}
 
 /* button */
-.btn {
+/* .btn {
   background-color: var(--color-btn);
   color: var(--color-white);
   text-transform: uppercase;
   letter-spacing: 2px;
-  padding: 15px 20px;
+  padding: 5px 5px;
   margin: 10px 0;
   text-align: center;
-}
+} */
