--- a/app/src/style/reset.css
+++ b/app/src/style/reset.css
@@ -29,7 +29,7 @@ body {
   margin: 0;
   font-family: var(--font-family);
   color: var(--text-color);
-  background-color: var(--gray-1);
+  background-color: var(-gray);
 }
 
 
@@ -38,13 +38,4 @@ body {
 
 
 
-/* button */
-/* .btn {
-  background-color: var(--color-btn);
-  color: var(--color-white);
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  padding: 5px 5px;
-  margin: 10px 0;
-  text-align: center;
-} */
+
