--- a/app/src/style/variables.css
+++ b/app/src/style/variables.css
@@ -1,17 +1,22 @@
 :root {
+  /*Background color  */
   --background-color: #96b011;
-  --color-2: #666;
-  --color-3: #b09067;
-  --color-4: #f2f2f2;
-  --color-5:rgba(255, 255, 255, 0.2);
-  --color-btn : #E9967A;
-  --color-7: 
-  --text-color: #666;
-   --gray: #ddd;
-  
-  --color-white: white;
+  --background-color-btn: B09067;
+  --background-color-hover: turquoise;
+  /* Color */
+    --gray: #ddd;
+    --color-white: white;
+
+  /* Button  color */
+   --color-btn : #E9967A;
+  --color-btn-red : red;
+
+  /* Text-color */
+   --text-color: #666;
+
+  /* Font-family */
   --font-family: "Amaranth", sans-serif;
-  --border-radius: 4px;
-  --border: 1px solid var(--gray);
+
+  
  
 }
