--- a/app/src/style/variables.css
+++ b/app/src/style/variables.css
@@ -9,6 +9,7 @@
   /* Colors */
     --gray: #ddd;
     --color-white: white;
+    --color-2 : #666;
 
   /* Button  color */
    --color-btn : #E9967A;
